force-app/main/default/objects/zkmulti__MCCustom_Address_Source_Field__c/zkmulti__MCCustom_Address_Source_Field__c.object-meta.xml
<CustomObject>
    <label>Custom Address Source Field</label>
    <nameField>
        <displayFormat>CF-{0000}</displayFormat>
        <label>Custom Address Source Field Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Address Source Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>