force-app/main/default/objects/zkmulti__MCCustom_Address_Source_Field__c/fields/zkmulti__Carrier__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Carrier__c</fullName>
    <label>Carrier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>