force-app/main/default/objects/zkmulti__MCCustom_Address_Source_Field__c/fields/zkmulti__Is_Dynamic__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Is_Dynamic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Dynamic</label>
    <type>Checkbox</type>
</CustomField>