force-app/main/default/objects/zkmulti__MCCustom_Address_Source_Field__c/fields/zkmulti__Option_Type__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Option_Type__c</fullName>
    <label>Option Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>