force-app/main/default/objects/zkmulti__MCCustom_Address_Source_Field__c/fields/zkmulti__Parent_Object__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Parent_Object__c</fullName>
    <label>Parent Object</label>
    <length>200</length>
    <type>Text</type>
</CustomField>